syntax = "proto3";

// each class is defined in each own file, inside a common package
option java_multiple_files = true;
option java_package = "cn2223tf";

package cn2223tf; // package do proto

service CN2223TFService {
    rpc uploadImage(stream Block) returns (ImageUploadResponse);
    rpc getLandmarks(Identifier) returns (SubmissionResponse);
    rpc getImage(Identifier) returns (stream ImageResponse);
    rpc getAllImages(Parameters) returns (ImagesResponse);
}

message Block {
    Image image=1;
}

message Image {
    Metadata metadata=1;
    bytes content = 2;
}

message Metadata {
    string name=1;
    string type=2;
}

message ImageUploadResponse {
    Identifier identifier = 1;
    Status status = 2;
}

message Identifier{
    string uuid=1;
}

message SubmissionResponse {
    repeated DetectedLandmark landmarks = 1;
}

message DetectedLandmark{
    string name=1;
    double latitude =2;
    double longitude =3;
    double confidence =4;
}

message ImageResponse{
    Image image = 1;
}

message Parameters {
    double certainty=1;
}

message ImagesResponse {
    repeated IdentifiedImage identified_image = 1;
}
message IdentifiedImage{
    string name = 1;
    string location=2;
}
enum Status {
    SUCCESS = 0;
    FAILURE = 1;
}

